--- a/templates/index2.html
+++ b/templates/index2.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MOC API DEMO</title>
+  <title>Matter Of Choice</title>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -101,20 +103,14 @@
 </head>
 <body>
   <div class="container">
-    <h1>MOC API DEMO</h1>
+    <h1>Matter Of Choice</h1>
 
-    <p style="color: blue;">*you can change a subject before generating the next set of cases</p>
 
     <div id="form-container">
       <form id="generateForm">
 
 
-        <label for="sex">Sex</label>
-        <select id="sex" name="sex">
-          <option value=""></option>
-          <option value="male">male</option>
-          <option value="female">female</option>
-        </select>
+
 
 
         <label for="language">Language:</label>
@@ -139,6 +135,12 @@
           <option value="Korean">Korean</option>
           <option value="Turkish">Turkish</option>
         </select>
+        <label for="sex">Gender</label>
+        <select id="sex" name="sex">
+          <option value=""></option>
+          <option value="male">male</option>
+          <option value="female">female</option>
+        </select>
 
         <label for="age">Age:</label>
         <select id="age" name="age" >
@@ -156,10 +158,12 @@
 
         <label for="subject">Subject:</label>
         <input type="text" id="subject" name="subject" required>
-
-        <label for="allow_image">Allow Image Generation:</label>
-        <input type="checkbox" id="allow_image" name="allow_image" value="true">
-        
+        <!-- <label for="allow_image">Allow Image Generation:</label>
+        <select id="allow_image" name="allow_image">
+            <option value="False" selected>No</option>
+            <option value="True">Yes</option>
+        </select> -->
+         
         <label for="difficulty">Difficulty Level:</label>
         <select id="difficulty" name="difficulty" required>
           <option value="normal">normal</option>
