--- a/static/css/style.css
+++ b/static/css/style.css
@@ -692,7 +692,7 @@ input[type="checkbox"]:checked::after {
 /* Label styling */
 label {
     font-weight: 500;
-    color: #e1e8f0;
+    color: #020202;
     margin-bottom: 0.25rem;
     display: block;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
