--- a/templates/index2.html
+++ b/templates/index2.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-translate="title">Matter Of Choice</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/theme.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <script>
     // Inline script to ensure subtypes are populated immediately
@@ -201,6 +202,7 @@
     <!-- Add translations file before main script -->
     <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/theme.js') }}"></script>
 
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript" >
